apps/registry/registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  labels:
    app: registry
spec:
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      nodeSelector:
        arch: "amd64"
      containers:
        - name: registry
          image: registry
          volumeMounts:
            - name: repo
              mountPath: "/var/lib/registry"
            - name: auth
              mountPath: "/auth"
              readOnly: true
          ports:
            - name: http
              containerPort: 5000
      volumes:
        - name: repo
          persistentVolumeClaim:
            claimName: registry-repo
        - name: auth
          secret:
            secretName: registry-auth
---
apiVersion: v1
kind: Service
metadata:
  name: registry
spec:
  selector:
    app: registry
  ports:
    - name: http
      port: 5000
      targetPort: 5000
