apps/registry/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    kubernetes.io/tls-acme: 'true'
    cert-manager.io/issuer: "letsencrypt-prod"
  name: registry-ingress
spec:
  tls:
  - hosts:
    - reg.icyphox.sh
    secretName: registry-certs
  rules:
  - host: reg.icyphox.sh
    http:
      paths:
      - backend:
          service:
            name: registry
            port:
              number: 5000
        path: /
        pathType: Prefix
